_sass/main.scss
@font-face {
  font-family: "Helvetica LT Std";
  src: url("../fonts/HelveticaLTStd-Roman.eot");
  src: url("../fonts/HelveticaLTStd-Roman.eot?#iefix") format("embedded-opentype"),
  url("../fonts/HelveticaLTStd-Roman.woff2") format("woff2"),
  url("../fonts/HelveticaLTStd-Roman.woff") format("woff"),
  url("../fonts/HelveticaLTStd-Roman.ttf") format("truetype");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Helvetica LT Std";
  src: url("../fonts/HelveticaLTStd-Bold.eot");
  src: url("../fonts/HelveticaLTStd-Bold.eot?#iefix") format("embedded-opentype"),
  url("../fonts/HelveticaLTStd-Bold.woff2") format("woff2"),
  url("../fonts/HelveticaLTStd-Bold.woff") format("woff"),
  url("../fonts/HelveticaLTStd-Bold.ttf") format("truetype");
  font-weight: bold;
  font-style: normal;
}

body {
  font-family: "Helvetica LT Std", sans-serif;
  overflow-x: hidden;
  max-width: 100%;
}

.main-nav {
  padding: 0;
  a {
    &.current {
      color: #FF5100;
    }
    font-size: 15px;
    line-height: 17px;
    color: #000;
    font-weight: bold;
    padding: 40px 15px 30px;
    display: block;
  }
  .facebook-icon {
    padding: 27px 15px 30px;
    a {
      text-indent: -10000px;
      height: 36px;
      width: 32px;
      background: url("../images/facebook.png") no-repeat;
      background-size: contain;
      padding: 0;
    }
  }
  .navbar-toggler {
    height: 45px;
    width: 42px;
    background: url("../images/hamburger.png") no-repeat;
    background-size: contain;
    margin: 21px 22px 7px 0;
    z-index: 5;
    &[aria-expanded="true"] {
      height: 28px;
      width: 28px;
      margin: 28px 28px 17px 0;
      background: url("../images/close.png") no-repeat;
      background-size: contain;
    }
    &:focus {
      border: none;
      outline: none;
      border-radius: 0;
    }
  }
}

.hero-image {
  height: 420px;
  width: 100%;
  background: url("../images/team.png") no-repeat 50% 50%;
  background-size: cover;
  position: relative;
  .logo {
    background: url("../images/logo.png") no-repeat;
    background-size: contain;
    position: absolute;
    z-index: 5;
  }
  .tagline {
    background: url("../images/tagline.png") no-repeat;
    background-size: contain;
    position: absolute;
    z-index: 2;
  }
}

.main-nav-section {
  border-bottom: 1px solid transparent; /* prevents margin collapsing */
  &.what-is-next {
    .header-icon {
      background: url("../images/flag.png") no-repeat;
      background-size: contain;
    }
  }
  &.statistics {
    .header-icon {
      background: url("../images/calculator.png") no-repeat;
      background-size: contain;
    }
  }
  &.calendar {
    .header-icon {
      background: url("../images/calendar.png") no-repeat;
      background-size: contain;
    }
  }
  &.partners {
    .header-icon {
      background: url("../images/thumbs-up.png") no-repeat;
      background-size: contain;
    }
  }
  &.contact-us {
    .header-icon {
      background: url("../images/envelope.png") no-repeat;
      background-size: contain;
    }
  }
  h1 {
    text-align: center;
    font-weight: bold;
    position: relative;
    &:after {
      display: block;
      height: 15px;
      width: 51px;
      background: url("../images/separator.png") no-repeat;
      background-size: contain;
      content: "";
      text-align: center;
      position: absolute;
      left: 50%;
      margin-left: -25px;
    }
  }
  .header-icon {
    width: 61px;
    height: 65px;
    margin: 0 auto 25px;
  }
  .section-text {
    max-width: 566px;
    margin: 0 auto;
    text-align: center;
    font-size: 14px;
    line-height: 22px;
    p {
      margin-bottom: 25px;
    }
  }
}

.statistics {
  max-width: 1000px;
  .icon-container {
    margin-bottom: 30px;
    height: 114px;
  }
  .icon {
    margin: 0 auto;
  }
  .numerical {
    font-size: 30px;
    text-align: center;
    line-height: 36px;
    font-weight: bold;
  }
  .asset-name {
    font-size: 14px;
    line-height: 16px;
    text-align: center;
    font-weight: bold;
  }
  .money {
    .icon {
      background: url("../images/stats-bill.png") no-repeat;
      background-size: contain;
    }
  }
  .minutes {
    .icon {
      background: url("../images/stats-chronometer.png") no-repeat;
      background-size: contain;
    }
  }
  .events {
    .icon {
      background: url("../images/stats-flag.png") no-repeat;
      background-size: contain;
    }
  }
}
/* ... */

